job-application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-application-deployment
  labels:
    app: job-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-application
  template:
    metadata:
      labels:
        app: job-application
    spec:
      containers:
      - name: job-application
        image: veljkoskrbic/hirely-job-application-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5004
