job-application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-application-api-service
spec:
  selector:
    app: job-application
  ports:
  - name: http
    port: 8080
    targetPort: 5004
